k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: electronics
  labels:
    app.kubernetes.io/part-of: electronics-api
