k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: electronics-api
  namespace: electronics
  labels:
    app: electronics-api
spec:
  type: ClusterIP
  selector:
    app: electronics-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
